--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Math-rm1/nodejs-api-rest#readme",
   "dependencies": {
+    "consign": "^0.1.6",
     "express": "^4.17.2"
   },
   "devDependencies": {
