--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "consign": "^0.1.6",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "moment": "^2.29.1",
     "mysql": "^2.18.1"
